# avatar-builder

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CONFIG_FIX_FINAL_STATUS.md  CONFIG_FIX_SUMMARY.md  DEPLOYMENT_FIX_NOTES.md  DEVELOPMENT_STATE.md  FIX_CONTACTS_PERMISSION.md  FIX_SUMMARY.md  MANIFEST.in  MODEL_UPDATE_FIX.md  Makefile  NICKNAME_SYSTEM_README.md  QUICKSTART.md  README.md  SECURITY_ENHANCEMENTS.md  SESSION_SUMMARY_2025-09-06.md  SESSION_SUMMARY_2025-09-07.md  SESSION_SUMMARY_2025-09-28.md  SESSION_SUMMARY_2025-09-28_LLM_FIX.md  apply_claude4_fix.py  avatar_prompt_Claire_Russell.txt  cleanup_system.py  commit_llm_integration.sh  commit_loader_integration.py  commit_model_fix.sh  commit_model_update.sh  create_app_bundle_for_permission.py  create_security_branch.sh  deploy_with_fix.sh  diagnose.py  enhanced_deployment.py  final_check.sh  final_commit.sh  final_git_prep_auth.sh  final_git_prep_complete.sh  final_git_prep_utilities.sh  final_prep.sh  final_prep_repository.py  (+52 more)
avatar_intelligence_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: sample_messages.json
deduplication/: README.md  __init__.py  deduplication_cli.py  deduplication_config.py  person_entity_deduplication.py  test_person_deduplication.py
docs/: Enhanced Avatar Intelligence System.docx  LOCAL_STORAGE_MANAGER.md  RATE_LIMITING_SOLUTION.md  avatar_cli_usage.md  llm_json_parsing_fix.md  message_data_loading.md  neo4j_data_model.md
docs/archived/: BACKLOG_CODE_COMPLETENESS.md  BACKLOG_TOKEN_MONITORING.md
docs/fixes/: import_error_fix_2025-09-27.md
docs/session_history/: CLEANUP_SUMMARY_2025-09-14.md  LARGE_DATABASE_FIX.md  NAS_SQLITE_SOLUTION.md  SESSION_SUMMARY_2025-09-06.md  SESSION_SUMMARY_2025-09-07.md  SESSION_SUMMARY_2025-09-13.md  SESSION_SUMMARY_NAS_STORAGE_2025-09-14.md
docs/slm/: slm_documentation.md
examples/: basic_usage.py  enhanced_demo.py  test_enhanced_system.py  test_system.py
examples/slm/: slm_pipeline_example.py
sql/: avatar_intelligence_schema.cypher  enhanced_avatar_schema.cypher
src/: __init__.py  avatar_intelligence_pipeline.py  avatar_system_deployment.py  config_manager.py  enhanced_avatar_pipeline.py  imessage_extractor.py  llm_integrator.py  llm_integrator_original.py  message_data_loader.py  rate_limiter.py  secure_database.py  security_utils.py  storage_manager.py  token_monitor.py
src/database/: __init__.py  graph_builder.py
src/extractors/: __init__.py  address_book_extractor.py  nickname_inference.py
src/models/: __init__.py  graph_models.py
src/pipelines/: __init__.py  extraction_pipeline.py  extraction_pipeline_llm_fix.py
src/reliability/: __init__.py  circuit_breaker.py  connection_pool.py  error_handler.py  retry_manager.py
src/slm/: __init__.py  mlx_slm_model.py  neo4j_data_extractor.py  slm_inference_engine.py  slm_trainer.py
src/slm/inference/: README.md  __init__.py  chat.py
tests/: __init__.py  test_config_manager_fixes.py  test_deployment.py  test_security_phase1.py
utilities/: .gitignore  FIXES_COMPLETE.md  README.md  __init__.py  audit_code_completeness.py  backup_neo4j.py  debug_neo4j.py  generate_secure_env.py  make_executable.sh  reset_neo4j.py  run_extractor.py  run_with_local_storage.py  setup_neo4j.py  validate_data.py
utilities/slm/: add_slm_to_git.py  analyze_organization.py  complete_slm_git_integration.py  quick_add_slm.py
